# rag-ehanced-cover-letter-generator

./: .gitignore  README.md  env.example
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.local.yml  docker-compose.yaml  main.py  main_simple.py  page.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 992d76276b2f_edit_cv_table_alter_source_id_column.py  a1b2c3d4e5f6_create_users_table.py  a4b5c6d7e8f9_create_auto_parsed_jobs_table.py  b2c3d4e5f6a7_create_letters_table.py  b5c6d7e8f9a1_add_is_applied_to_auto_parsed_jobs.py  c3d4e5f6a7b8_create_cvs_table.py  d1e2f3a4b5c6_add_sent_cover_letters_table.py  e2f3a4b5c6d7_add_generation_time_ms_to_sent_letters.py  f3a4b5c6d7e8_create_parsing_jobs_table.py  g4b5c6d7e8f9_add_cover_letter_to_auto_parsed_jobs.py  h5c6d7e8f9a2_add_is_viewed_to_auto_parsed_jobs.py
backend/app/: database.py  main.py
backend/app/api/dto/: pdf.py  projects.py
backend/app/api/v1/: api.py
backend/app/cache/: redis.py
backend/app/core/: config.py
backend/app/helper/: user.py
backend/app/job_parser/: hh_parser.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  auto_parsed_job.py  base.py  cv.py  letter.py  parsing_job.py  sent_cover_letter.py  user.py
backend/app/repository/: __init__.py  cv_repository.py  letter_repository.py  sent_cover_letter_repository.py  user_repository.py
backend/app/schemas/: general.py  letter.py  rag.py
backend/app/schemas/llm_outputs/: cv_parse.py  job_requirements.py
backend/app/services/: cover_letter.py  cv.py  jwt.py  letter.py  password.py  pdf.py  projects.py  user.py
backend/app/services/embeddings/: __init__.py  base.py  local_mistral_embedder.py  (+1 more)
backend/validator/: pdf.py
(+101 files in other folders)
