[project]
name = "cover-letter-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pydantic[email]>=2.12.5",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "python-jose[cryptography]>=3.3.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "sqlmodel>=0.0.31",
    # "asyncpg>=0.29.0",  # Commented out for Windows compatibility
    # AI / RAG
    "openai>=2.14.0",
    "llama-index>=0.14.12",
    "llama-index-core>=0.14.10",
    "llama-index-readers-file>=0.5.6",
    "qdrant-client>=1.16.2",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    # Other
    "inngest>=0.5.13",
    "streamlit>=1.52.2",
    "langchain-openai>=1.2.0",
]
